hiding scrollbar, fixing input positioning issue

--- a/src/App.css
+++ b/src/App.css
@@ -26,24 +26,8 @@ h1 {
   background-color: #c7cb85;
   border: 2px ridge #7ea172;
   overflow-y: scroll;
-}
-.day ::-webkit-scrollbar {
-  width: 1px;
-}
-
-/* Track */
-body::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-body::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-body::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  overflow-x: hidden;
+  scrollbar-width: none;
 }
 
 form {
@@ -97,6 +81,7 @@ select {
 .toDoItem {
   display: flex;
   padding: 5px 0;
+  position: relative;
 }
 
 .toDoItem form {
