--- a/src/styles/_day.scss
+++ b/src/styles/_day.scss
@@ -29,24 +29,8 @@ $five: #d17b88;
   background-color: #c7cb85;
   border: 2px ridge #7ea172;
   overflow-y: scroll;
-  ::-webkit-scrollbar {
-    width: 1px;
-  }
-}
-
-/* Track */
-body::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-body::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-body::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  overflow-x: hidden;
+  scrollbar-width: none;
 }
 
 form {
@@ -80,7 +64,6 @@ select {
   margin: 5px auto;
   background: #e7a977;
   border: 1px solid #7ea172;
-  // color: #e7a977;
 }
 
 .button:hover,
