--- a/src/styles/_sections.scss
+++ b/src/styles/_sections.scss
@@ -11,6 +11,7 @@
 .toDoItem {
   display: flex;
   padding: 5px 0;
+  position: relative;
 }
 
 .toDoItem form {
